name:                libmastodon
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dgonyeo/libmastodon#readme
license:             BSD3
license-file:        LICENSE
author:              Derek Gonyeo
maintainer:          derek@gonyeo.com
copyright:           Apache 2.0
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Mastodon.Lib
                     , Web.Mastodon.Lib.Types
  other-modules:       Web.Mastodon.Lib.Internal
  build-depends:       base               >= 4.7  && < 5
                     , http-conduit       >= 2.2  && < 3
                     , authenticate-oauth >= 1.6  && < 1.7
                     , http-types         >= 0.9  && < 1.0
                     , bytestring         >= 0.10 && < 1.0
                     , text               >= 1.2  && < 2.0
                     , http-client        >= 0.5  && < 0.6
                     , aeson              >= 1.0  && < 2.0
                     , transformers       >= 0.5  && < 0.6
                     , servant            >= 0.9  && < 0.10
                     , servant-client     >= 0.9  && < 0.10
                     , servant-server     >= 0.9  && < 0.10
                     , http-api-data      >= 0.3  && < 0.4
  default-language:    Haskell2010

test-suite libmastodon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , libmastodon
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dgonyeo/libmastodon
